<resources>
    <string name="app_name">Healthcare-app</string>
    <string name="yourhealth">YourHealth</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_for_new_user">Sign Up!</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth(DD/MM/YYYY)</string>
</resources>