<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourhealth"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/lato_bold_italic"
            android:textSize="60sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#171414" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="70dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="50sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email:"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginRight="90dp"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/editTextLoginGmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:ems="12"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="#b8b8b8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password:"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:layout_marginRight="70dp"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/editTextLoginPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:ems="12"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="#b8b8b8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/loginbutt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            android:text="Login"
            android:textSize="20sp"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/login_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:text="@string/register_for_new_user"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>
